resources/style.css
@font-face {
    font-family: title;
    src: url('/resources/SpaceMono-Regular.ttf');
}

@font-face {
    font-family: body;
    src: url('/resources/NanumMyeongjo-Regular.ttf');
}

html {
    margin: 0 auto;
	max-width: 1000px;
}

h1, h2, h3 {
	font-weight: normal;
    font-family: title, sans-serif;
}

h1 {
    font-size: 60px;
    line-height: 1.2;
}

h2 {
    font-size: 30px;
}

h3 {
    font-family: body, serif;
    font-size: 30px;
}

body, h3 {
	font-family: body, serif;
}

body {
    font-size: 20px;
    color: #FFFFFF;
    padding: 50px 25px 25px 25px;
    margin:0;
    line-height: 2;
	overflow-x: hidden;
	background-color: #2a2622;
	background-image:url('/resources/paper.png');
	background-attachment: fixed;
}

li {
	padding-bottom: 5pt;
}

article > img, article > a > img, article > .webvid {
    width: 100%;
	margin:20px 0;
}

.webvid {
	padding:56.25% 0 0 0;
	position:relative;
	background-color:black;
}

.webvid * {
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
}

iframe {
	border: none;
}

a {
    color: #e65f54;
}

a:hover {
    color: #fee400;
}

#navmobile {
	display: none;
	width: 80px;
	left: 0;
	right: 0;
	height: 50px;
	margin: 0;
	padding: 5px 25px 10px 25px;
	top: 0;
	position:fixed;
	color: #ffffff;
	background-color: #e65f54;
	font-size:25px; 
	font-family:title;
	z-index: 99 !important;
	border-radius: 0 0 50px 0;
	color: #ffffff;
	text-decoration: none;
}

#navframe {
	position:fixed; 
	height:100%;
	width: 200px;
	margin-left:-25px;
	top:0;
	overflow:visible;
}

.viewerOptions {
	background-color:#2a2622;
	padding: 10px 40px 10px 10px; 
	position:absolute; 
	left:0px; bottom:0px; 
	font-family:title; 
	border-radius: 0 50px 0 0;
}

nav {
	margin:auto;
	padding:0;
	margin:50px auto 50px auto;
	position:relative;
	
    text-align: center;

    font-family: title, sans-serif;
    font-size: 30px;

	width: 150px;

    color: #2a2622;
	
	overflow-y: auto;
    overflow-x: hidden;
	
	background-color: #e65f54;
    border-radius: 100px 100px 10px 10px;
}

nav, #navmobile {
	box-shadow: inset 1px 2px 0 #FFFFFF30, inset -1px -2px 0 #00000050, 0px 10px 20px #00000050;
}

nav a {
    color: #ffffff;
	text-decoration: none;
}

nav ul {
    margin: 0;
    line-height: 1;
    padding: 0 15px;
    list-style-type: none;
}

nav li {
    padding-bottom: 15pt;
}

article {
    margin-left: 175px;
}

.software-icon {
	width: 1em;
	height: 1em;
	display: inline;
	vertical-align: baseline;
}

.circlesPacked {
	padding:0;
	margin:-75px -50px;
	padding:100px 50px;
    /* width: 100%; */
	/* margin: 0 auto; */
	overflow: auto;
}

.packedCircle {
	overflow: hidden;
	position: relative;

    width: 38%;
	padding-bottom: 38%;
    height: 0;
	float: left;
	
	border-radius: 50%;
	display: inline;
	margin:1%;
	margin-top: -4%;
	
	background-color:#00000020;
	box-shadow: inset 1px 2px 0 #FFFFFF10, inset -1px -2px 0 #00000030;
}

.packedCircle:hover {
	background-color:#FFFFFF;
	box-shadow: 0px 0px 50px #fee400;
}

.packedCircle .thumbnail {
	width:90%;
	height:90%;
	left:5%;
	top:5%;
	position:absolute;
	border-radius:50%;
	line-height: 90%;
}

.packedCircle .thumbtext {
	font-family:title;
	display: none;
	justify-content: center;
	align-items: center;
	text-align:center;
	background-color: #00000090;
	backdrop-filter: blur(5px);
}

.packedCircle:hover .thumbtext {
	display: flex;
}

.circlesPacked a:nth-child(4n+3) {
	margin-left: 20.5%;
}

.circlesPacked a:nth-child(4n+5) {
	clear:left;
}

#backgroundGlyph {
	position:fixed;
	width:700px;
	height:700px;
	/* top:0; */
	bottom:-80px;
	left:0px;
	opacity:1%;
	background-image:url('/resources/dog cropped.svg');
	background-position: left bottom;
	background-repeat: no-repeat;
	z-index:-100;
}

@media screen and (max-width: 700px) {

    h1 {
        font-size: 35px;
    }

    h2, h3 {
        font-size: 25px;
    }
	
	article {
		margin-left:0;
	}
	
	article p, h1, h2, h3 {
		padding:0 10px 0 10px;
	}

    #navframe {
        display: none;
    }
	
	#navmobile {
		display: block;
	}
	
	body {
		padding-left:0px;
		padding-right:0px;
	}
	
	#backgroundGlyph {
		/* position:fixed;
		width:100%;
		
		bottom:0;
		left:-15%;
		opacity:2%; */
		
		display: none;
	}
	
	.verticalvid {
		padding:100% 0 0 0;
	}
}

